# frozen

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  deploy.sh  etg_client.py  etg_hotels.ipynb  events.py  frozen-api.service  hotels.py  improve_score.ipynb  main.py  pyproject.toml  reviews.py  scoring.py  search_hotels.ipynb
.artifacts/: REF_Иркутск_2026-03-01_2026-03-04.csv
api/: __init__.py  app.py  events.py  schemas.py  search.py
etg/: __init__.py  client.py  exceptions.py  types.py
prompts/: hotel_scoring.md
services/: __init__.py  hotels.py  llm_providers.py  reviews.py  scoring.py
utils/: __init__.py  formatting.py  sse.py  urls.py
