[project]
name = "frozen"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "genkit>=0.4.0",
    "genkit-plugin-google-genai>=0.4.0",
    "ipykernel>=7.1.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-ai>=1.42.0",
]
