[project]
name = "frozen"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "uvicorn>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "genkit>=0.4.0",
    "genkit-plugin-google-genai>=0.4.0",
    "ipykernel>=7.1.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-ai>=1.42.0",
    "pandas-stubs~=2.3.3",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

# =============================================================================
# Ruff Configuration (максимально строгие настройки)
# =============================================================================
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# Включаем ВСЕ правила, затем отключаем неподходящие
select = ["ALL"]
ignore = [
    # Несовместимые с formatter
    "W191",    # indentation contains tabs
    "E111",    # indentation is not a multiple of four
    "E114",    # indentation is not a multiple of four (comment)
    "E117",    # over-indented
    "D206",    # docstring should be indented with spaces, not tabs
    "D300",    # use triple double quotes
    "Q000",    # single quotes found but double quotes preferred
    "Q001",    # single quote multiline found but double quotes preferred
    "Q002",    # single quote docstring found but double quotes preferred
    "Q003",    # change outer quotes to avoid escaping inner quotes
    "COM812",  # missing trailing comma (conflicts with formatter)
    "COM819",  # trailing comma prohibited
    "ISC001",  # single line implicit string concatenation
    "ISC002",  # multi line implicit string concatenation

    # Документация (русский язык, не требуем английский стиль)
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "D203",    # 1 blank line required before class docstring (conflicts with D211)
    "D212",    # Multi-line docstring summary should start at the first line (conflicts with D213)
    "D415",    # First line should end with a period, question mark, or exclamation point

    # Аннотации типов (TypedDict и специфика проекта)
    "ANN401",  # Dynamically typed expressions (Any) are disallowed

    # Прочие исключения для этого проекта
    "S101",    # assert used (OK для внутреннего кода)
    "T201",    # print found (OK для логирования в ETG client)
    "EM101",   # Exception must not use a string literal
    "EM102",   # Exception must not use an f-string literal
    "TRY003",  # Avoid specifying long messages outside the exception class
    "FBT001",  # Boolean positional arg in function definition
    "FBT002",  # Boolean default value in function definition
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link on the line following this TODO
    "FIX002",  # Line contains TODO

    # Русский язык и Unicode (используется в UI-текстах и описаниях API)
    "RUF001",  # String contains ambiguous unicode character (кириллица)
    "RUF002",  # Docstring contains ambiguous unicode character
    "RUF003",  # Comment contains ambiguous unicode character

    # Сложность (в реальном проекте лучше рефакторить, но пока игнорируем)
    "C901",    # Function is too complex
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements

    # Импорты внутри функций (нужны для избежания циклических импортов)
    "PLC0415", # import should be at top level

    # Производительность (микро-оптимизации, не критично)
    "PERF401", # Use list comprehension instead of loop

    # Исключения (общий обработчик для логирования)
    "BLE001",  # Blind exception catching (OK для top-level error handlers)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__
"etg_hotels.ipynb" = ["ALL"]  # notebook — не линтуем

[tool.ruff.lint.isort]
known-first-party = ["api", "config", "etg", "services", "utils"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# =============================================================================
# Mypy Configuration (максимально строгие настройки)
# =============================================================================
[tool.mypy]
python_version = "3.13"
strict = true

# Дополнительные строгие проверки поверх strict
warn_unreachable = true
warn_no_return = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true

# Игнорируем отсутствие стабов для внешних библиотек
[[tool.mypy.overrides]]
module = [
    "genkit.*",
    "genkit_plugin_google_genai.*",
    "google.genai.*",
    "pydantic_ai.*",
]
ignore_missing_imports = true
